# Linux_MIPT_HW

./: backup.sh  gedit-xdotool-testing.sh
mini_fs/: CMakeLists.txt  block.h  filesystem.c  filesystem.h  fs_constants.h  inode.c  inode.h  main.c  superblock.c  superblock.h
